[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Map_Parts/MP-42-Mario-Pipe_2.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Map_Parts/MP-41-Mario-Pipe_2.png" type="Texture" id=2]
[ext_resource path="res://Tilesets/TS-07-Plats2.tres" type="TileSet" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 60 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 2 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 40.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 32.9999
height = 20.0002

[sub_resource type="CapsuleShape2D" id=6]
radius = 3.99991
height = 70.0002

[node name="MP-42-Mario-Pipe_2" type="Node2D" groups=[
"pipe",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." groups=[
"pipe",
]]
modulate = Color( 0, 1, 0.0627451, 0.788235 )
rotation = 1.5708
z_index = 50
texture = ExtResource( 2 )
offset = Vector2( -10, 0 )
hframes = 4

[node name="Sprite2" type="Sprite" parent="Sprite"]
position = Vector2( 10, 0 )
texture = ExtResource( 2 )
hframes = 4
frame = 1

[node name="Sprite3" type="Sprite" parent="Sprite"]
position = Vector2( 30, 0 )
texture = ExtResource( 2 )
hframes = 4
frame = 1

[node name="Sprite4" type="Sprite" parent="Sprite"]
position = Vector2( 50, -3.8147e-06 )
texture = ExtResource( 2 )
hframes = 4
frame = 1

[node name="Sprite5" type="Sprite" parent="Sprite"]
position = Vector2( 70, 0 )
texture = ExtResource( 2 )
hframes = 4
frame = 1

[node name="Sprite6" type="Sprite" parent="Sprite"]
position = Vector2( 90, -7.62939e-06 )
texture = ExtResource( 2 )
hframes = 4
frame = 1

[node name="Sprite7" type="Sprite" parent="Sprite"]
visible = false
position = Vector2( 110, -7.62939e-06 )
texture = ExtResource( 2 )
hframes = 4
frame = 3

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="TileMap" type="TileMap" parent="." groups=[
"map_part",
]]
modulate = Color( 0, 1, 0.0901961, 1 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 20, 20 )
collision_layer = 4
collision_mask = 4
format = 1
tile_data = PoolIntArray( -2, 0, 0, -1, 0, 1, -65536, 0, 1, -65535, 0, 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 264
collision_mask = 264

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 42, 40 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -42, 40 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 98 )
shape = SubResource( 2 )

[node name="Position2D-Top" type="Position2D" parent="."]
position = Vector2( 0, -32 )

[node name="Position2D-Bottom" type="Position2D" parent="."]
position = Vector2( 0, 75 )

[node name="Area2D-Top" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D-Top"]
position = Vector2( 0, -32 )
shape = SubResource( 5 )

[node name="Area2D-Bottom" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D-Bottom"]
position = Vector2( 0, 54 )
shape = SubResource( 4 )

[node name="Area2D-Very_Bottom" type="Area2D" parent="."]
collision_layer = 526
collision_mask = 526

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D-Very_Bottom"]
position = Vector2( 0, 92 )
rotation = 1.5708
shape = SubResource( 6 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D-Top" to="." method="_on_Area2DTop_body_entered"]
[connection signal="body_exited" from="Area2D-Top" to="." method="_on_Area2DTop_body_exited"]
[connection signal="body_entered" from="Area2D-Bottom" to="." method="_on_Area2DBottom_body_entered"]
[connection signal="body_exited" from="Area2D-Bottom" to="." method="_on_Area2DBottom_body_exited"]
[connection signal="body_entered" from="Area2D-Very_Bottom" to="." method="_on_Area2DVery_Bottom_body_entered"]
